# linux-config

./: .gitignore  .pyre_configuration  .stow-local-ignore  .stowrc  AGENTS.md  README.md  dot_zshrc  linux-setup  main.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  python-idioms.md  setup  setup.py  setup.ts  shellrc  sway-resize.sh  tw-shell-setup  vm.txt
.pyre/: pyre.stderr
DankMaterialShell/: settings.json
cachy/: config.conf  config.fish
docs/: build-servers-json.nu.md  distroboxes.md  docker-vm.md  docs.md  generate-tmuxp.nu.md  logs.md  nushell-best-practices.md  operating-systems.md  proxmox-guests.nu.md  proxmox.md  setup.md  ssh-copy-id.nu.md  stow-spec.md
dot_config/kitty/: kitty.conf
dot_config/mango/: config.conf
dot_config/niri/: config.kdl
dot_config/nushell/: config.nu  env.nu
home-manager/: dev-packages.nix  dev.nix  flake.nix  home.nix  packages.nix
legacy/: setup-desktop  setup-shell  sudo-warm
nixos-incus-vm/: flake.nix  nixos-incus-vm.nu  vm.nix
nu/: check.nu  distroboxes.nu  docker-vm.nu  dotfiles-clone.nu  dt.nu  fedora-post-setup.nu  fuzzel-windows.nu  generate-tmuxp.nu  git-cup.nu  gnome-boxes-example.nu  gnome-shortcut.nu  gnome.nu  greetd-pam-fix.nu  incus-firewall-config.nu  incus.nu  install-docker-vm.sh  kitty-ai.nu  lib.nu  logs.nu  min-stow.nu  pkg-install.nu  proxmox-guests.nu  setup-desktop.nu  setup-lib.nu  setup-shell.nu  setup.nu  shell-autostart.nu  split-equal.nu  split-into.nu  ssh-copy-id.nu  stow.nu  sudo-warm.nu  view-logs.nu  vm-venus.nu
nu/alacritty/: alacritty.toml
nu/fuzzel/: fuzzel.ini
nu/installers/: arch-setup.nu  setup-desktop.nu  setup-shell.nu  setup.nu
nu/lib/: lib.nu  setup-lib.nu
nu/stow/: stow.nu  test-stow.nu
nu/tests/: test-distroboxes.nu  (+4 more)
py/: AGENTS.md  Maskfile.md  README.md  logging_utils.py  proxmox-hosts.toml  proxmox_batch.py  proxmox_config_wizard.py  proxmox_inventory_builder.py  proxmox_maintenance.py  proxmox_manifest.py  proxmox_manifest_models.py  pyproject.toml  pyrightconfig.json  questionary_prompts.py  remote_maintenance.py
py/plans/: textual-migration-plan.md
py/proxmox_cli/: __init__.py  app.py  models.py  textual_app.py  textual_screens.py  textual_widgets.py
py/proxmox_cli/core/: __init__.py  batch.py  batch_helpers.py  exceptions.py  maintenance.py  models.py
py/proxmox_cli/utils/: __init__.py  logging.py
py/tests/: test_proxmox_batch.py  test_proxmox_cli.py  test_proxmox_config_wizard.py  test_proxmox_inventory_builder.py  test_proxmox_maintenance.py  test_textual_app.py  test_textual_widgets.py
scripts/: nushell-sources  quick-cmd.bash  screenshot.bash  setup  shellrc  start-niri
src/: setup.ts  stow.ts
ts/: package.json  tsconfig.json
zsh/: dot-zshrc
(+69 files in other folders)
