[project]
name = "linux-config"
version = "0.1.0"
description = "Linux workstation setup bootstrapper"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pyre-check", "basedpyright", "ruff"]

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
