[project]
name = "linux-config-scripts"
version = "0.1.0"
description = "Automation helpers for the linux-config repo"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.6.0",
  "questionary>=2.0.1",
  "paramiko>=3.5.0",
  "tomli-w>=1.0.0",
  "typer>=0.12.3",
  "rich>=14.0.0",
  "shellingham>=1.5.0",
  "cyclopts>=4.5.1",
  "ruamel-yaml>=0.19.1",
  "aiofiles>=25.1.0",
  "inquirerpy>=0.3.4",
  "asyncssh>=2.22.0",
  "tenacity>=9.1.3",
  "async-timeout>=5.0.1",
  "aiobreaker>=1.2.0",
  "structlog>=25.5.0",
  "logfire>=0.50.0",
  "result>=0.17.0",
  "aiostream>=0.7.1",
]

[project.optional-dependencies]
dev = [
  "pyright>=1.1.350",
  "pytest>=8.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[project.scripts]
proxmoxctl = "proxmox_cli.app:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]


[tool.ruff]
target-version = "py312"
line-length = 110
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ASYNC", "RUF"]
extend-select = ["B", "C4", "PIE", "SIM"]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["proxmox_maintenance"]

[tool.pixi.workspace]
name = "linux-config-scripts"
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64"]

[tool.pixi.dependencies]
python = "3.12.*"
uv = "*"

[tool.pixi.pypi-dependencies]
linux-config-scripts = { path = ".", editable = true }

[tool.pixi.feature.dev.pypi-dependencies]
linux-config-scripts = { path = ".", editable = true, extras = ["dev"] }

[tool.pixi.environments]
default = ["dev"]
runtime = []

[tool.pixi.tasks]
lint = "uv run --extra dev ruff check"
lint-fix = "uv run --extra dev ruff check --fix"
check = "bash -lc 'uv run --extra dev pyright && uv run --extra dev ruff check'"
fmt = "uv run --extra dev ruff format"
typecheck = "uv run --extra dev pyright"
test = "uv run --extra dev pytest"
proxmox-maintenance = "uv run proxmoxctl maintenance run"
proxmox-dry-run = "uv run proxmoxctl maintenance run -- --dry-run"
proxmox-batch = "uv run proxmoxctl batch run"
proxmox-wizard = "uv run proxmoxctl wizard run"
proxmox-inventory = "uv run proxmoxctl inventory configure"
